fix: issue overflow with tooltip

--- a/online-zoo/pages/landing/sass/_layouts.scss
+++ b/online-zoo/pages/landing/sass/_layouts.scss
@@ -473,7 +473,14 @@
     justify-content: center;
   }
 }
-
+.tooltip {
+  &_left {
+    left: 0px;
+  }
+  &_right {
+    right: 0px;
+  }
+}
 //footer style
 .footer {
   background: #333;
@@ -799,10 +806,6 @@
       height: 388px;
     }
   }
-  .tooltip {
-    padding: 0;
-    width: 330px;
-  }
 
   .form {
     &__fieldset {
@@ -1116,6 +1119,33 @@
       display: none;
     }
   }
+
+  .tooltip {
+    width: 238px;
+    height: 113px;
+    &-content {
+      padding: 16px 24px 19px 15px;
+    }
+    &__img {
+      width: 40px;
+      height: 40px;
+      margin-right: 8px;
+    }
+    &__header {
+      margin-bottom: 5px;
+      height: 21px;
+      @include font(1.4rem, 16px, 900);
+      color: #333333;
+    }
+    &__text {
+      @include font(1.1rem, 13px, normal, normal);
+      color: var(--color-text);
+      margin-bottom: 5px;
+      &_bold {
+        font-weight: 500;
+      }
+    }
+  }
 }
 @media screen and (max-width: 420px) {
   .footer-btn {
@@ -1156,6 +1186,10 @@
       &-fix {
         bottom: 65.4%;
         left: calc(13.9% - 16.4px);
+      }
+
+      &_320px {
+        left: calc(18.9% - 34px);
       }
     }
     &__crocodile {
@@ -1266,8 +1300,10 @@
     margin-right: 24px;
   }
 
-  .map__title {
-    margin-bottom: 22px;
+  .map {
+    &__title {
+      margin-bottom: 22px;
+    }
   }
   .btn_map {
     margin-bottom: 56px;
