--- a/online-zoo/pages/landing/style.css
+++ b/online-zoo/pages/landing/style.css
@@ -936,6 +936,14 @@ input:checked + .slider:before {
           justify-content: center;
 }
 
+.tooltip_left {
+  left: 0px;
+}
+
+.tooltip_right {
+  right: 0px;
+}
+
 .footer {
   background: #333;
   /*&__left {
@@ -1302,10 +1310,6 @@ input:checked + .slider:before {
     background-size: 100%;
     height: 388px;
   }
-  .tooltip {
-    padding: 0;
-    width: 330px;
-  }
   .form__fieldset {
     height: 124px;
   }
@@ -1611,6 +1615,38 @@ input:checked + .slider:before {
   .promo__social {
     display: none;
   }
+  .tooltip {
+    width: 238px;
+    height: 113px;
+  }
+  .tooltip-content {
+    padding: 16px 24px 19px 15px;
+  }
+  .tooltip__img {
+    width: 40px;
+    height: 40px;
+    margin-right: 8px;
+  }
+  .tooltip__header {
+    margin-bottom: 5px;
+    height: 21px;
+    font-size: 1.4rem;
+    font-weight: 900;
+    font-size: 1.4rem;
+    line-height: 16px;
+    color: #333333;
+  }
+  .tooltip__text {
+    font-size: 1.1rem;
+    font-weight: normal;
+    font-size: 1.1rem;
+    line-height: 13px;
+    color: var(--color-text);
+    margin-bottom: 5px;
+  }
+  .tooltip__text_bold {
+    font-weight: 500;
+  }
 }
 
 @media screen and (max-width: 420px) {
@@ -1648,6 +1684,9 @@ input:checked + .slider:before {
   .map__eagle-fix {
     bottom: 65.4%;
     left: calc(13.9% - 16.4px);
+  }
+  .map__eagle_320px {
+    left: calc(18.9% - 34px);
   }
   .map__crocodile {
     position: absolute;
